search update